[project]
name = "hellokoyeb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pyright>=1.1.399",
    "ruff>=0.11.6",
]

[tool.mypy]
plugins = ['pydantic.mypy']